{
  "dashboard": "Dashboard",
  "about": "About",
  "selectDate": "Choose Date",
  "selectTime": "Choose Time",
  "select": "Select",
  "cancel": "Cancel",
  "pleaseWait": "Please Wait...",
  "login": "Login",
  "email": "Email",
  "password": "Password",
  "register": "Register",
  "askRegister": "Don't have an account? Sign up",
  "errorInvalidEmail": "Email is not valid",
  "errorEmptyField": "Can't be empty",
  "errorPasswordLength": "Password must be at least 6 characters",
  "passwordRepeat": "Repeat Password",
  "errorPasswordNotMatch": "Password doesn't match",
  "settings": "Settings",
  "themeLight": "Theme Light",
  "themeDark": "Theme Dark",
  "themeSystem": "Theme System",
  "chooseTheme": "Choose Theme",
  "chooseLanguage": "Choose Language",
  "errorNoData": "No data",
  "logout": "Logout",
  "logoutDesc": "Do you want to logout from the app?",
  "yes": "Yes",
  "lastUpdate": "Last Update: ",
  "name": "Name",
  "nameHint": "Mudassir",
  "emailHint": "mudassir@lazycatlabs.com",
  "passwordHint": "••••••••••••",
  "menu": "Menu",
  "english": "English",
  "bahasa": "Bahasa",
  "welcomeBack": "Welcome back",
  "loginSubtitle": "Sign in to continue to your account",
  "createAccount": "Create account",
  "registerSubtitle": "It only takes a minute to get started"
}
