appId: com.lazycatlabs.auths
---
- tapOn: "Menu"
- tapOn: "Logout"
- tapOn: "Yes"
