appId: com.lazycatlabs.auths
---
- tapOn: "Don't have an account.*"
- tapOn: "Mudassir"
- inputText: "Mudassir"
- tapOn: "mudassir@lazycatlabs.com"
- inputText: "mudassir@lazycatlabs.com"
- tapOn: "Create account"
- tapOn: "password\n••••••••••••"
- waitForAnimationToEnd
- inputText: "pass123"
- tapOn: "Create account"
- tapOn: "repeat_password\n••••••••••••"
- waitForAnimationToEnd
- inputText: "pass123"
- tapOn: "Create account"
- tapOn: "Register"
