appId: com.lazycatlabs.auths.stg
---
- evalScript: ${output.email = 'flutter-auth-maestro-' + Date.now() + '@example.com'}
- tapOn: "Don't have an account.*"
- tapOn: "Mudassir"
- inputText: "Maestro Test User"
- tapOn: "mudassir@lazycatlabs.com"
- inputText: ${output.email}
- tapOn: "Create account"
- tapOn: "password\n••••••••••••"
- waitForAnimationToEnd
- inputText: "pass123"
- tapOn: "Create account"
- tapOn: "repeat_password\n••••••••••••"
- waitForAnimationToEnd
- inputText: "pass123"
- tapOn: "Create account"
- tapOn: "Register"
- extendedWaitUntil:
    visible: "Don't have an account.*"
    timeout: 15000
